--- a/package.json
+++ b/package.json
@@ -38,19 +38,19 @@
     "test": "grunt && mocha -R spec --timeout 5000"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "browserify": "^10.0.0",
-    "glob": "^5.0.5",
-    "lodash": "^3.8.0",
-    "resolve": "^1.1.6",
-    "watchify": "^3.2.1"
+    "async": "0.9.0",
+    "browserify": "10.0.0",
+    "glob": "5.0.5",
+    "lodash": "3.8.0",
+    "resolve": "1.1.6",
+    "watchify": "3.2.1"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "mocha": "^2.2.4",
-    "sinon": "^1.14.1"
+    "grunt": "0.4.5",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-jshint": "0.11.2",
+    "mocha": "2.2.4",
+    "sinon": "1.14.1"
   },
   "keywords": [
     "gruntplugin",
